@@ -1,3 +1,8 @@
+2004-08-14  Andrew V. Samoilov  <sav@bcs.zp.ua>
+
+	* extfs.c (extfs_init): Fix possible off-by-one buffer underflow
+	for empty lines in extfs.ini.
+
 2004-06-14  Pavel Roskin  <proski@gnu.org>
 
 	* tar.c: Eliminate struct hstat, use stack arguments instead.
@@ -67,7 +72,7 @@
 
 2003-11-14  Andrew V. Samoilov  <sav@bcs.zp.ua>
 
-	* undelfs.c (undelfs_loaddel): Use g_try_malloc()/g_try_relloc()
+	* undelfs.c (undelfs_loaddel): Use g_try_malloc()/g_try_realloc()
 	since we want to recover and not abort the program if we don't
 	have enough memory.
 	(com_err): Fix implementation.
